canary.yaml
# canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
    - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin
        subset: v1
      weight: 100
    - destination:
        host: httpbin
        subset: v2
      weight: 0
